--- a/src/main/resources/templates/persons.html
+++ b/src/main/resources/templates/persons.html
@@ -55,26 +55,27 @@
                         persons.forEach(function(person) {
                             const tableRowElement = document.createElement("tr");
                             let tdElement = document.createElement("td");
-                            tdElement.innerHTML = person.id;
+                            tdElement.textContent = person.id;
                             tableRowElement.appendChild(tdElement);
                             tdElement = document.createElement("td");
-                            tdElement.innerHTML = person.firstName;
+                            tdElement.textContent = person.firstName;
                             tableRowElement.appendChild(tdElement);
                             tdElement = document.createElement("td");
-                            tdElement.innerHTML = person.lastName;
+                            tdElement.textContent = person.lastName;
                             tableRowElement.appendChild(tdElement);
                             tdElement = document.createElement("td");
-                            tdElement.innerHTML = person.email;
+                            tdElement.textContent = person.email;
                             tableRowElement.appendChild(tdElement);
                             tdElement = document.createElement("td");
-                            tdElement.innerHTML = '<a href="/persons/' + person.id + '">View profile</a>';
+                            tdElement.textContent = person.id;
+                            tdElement.innerHTML = '<a href="/persons/' + tdElement.textContent + '">View profile</a>';
                             tableRowElement.appendChild(tdElement);
 
                             tableContent.appendChild(tableRowElement);
                         });
 
                         document.getElementById('searchContainer').className = '';
-                        document.getElementById('searchTerm').innerHTML = searchTerm;
+                        document.getElementById('searchTerm').textContent = searchTerm;
                     });
             };
 
